# hero-cli

./: README.md  cli.py  pyproject.toml
hero_cli/lib/schema_example/: api_schemas.py
scripts/: generate-model-schema.sh
tests/: test_hero_cli.py
