[tool.poetry]
name = "hero-cli"
version = "0.1.0"
description = ""
authors = ["Michael Johnsey <michaeljohnsey@changeresearch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
datamodel-code-generator = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
